[package]
name = "nessusx"
version = "1.0.0"
edition = "2021"
authors = ["abut0n"]
description = "nessus serializer & deserializer"
repository = "https://github.com/Marcuccio/nessusx"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = "0.4.22"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde-xml-rs = "0.6.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3.0"
serde_derive = "1.0.197"
clap = { version = "4.5.1", features = ["derive"] }
serde_yaml = "0.9.32"
